# ekisuleaderboard

./: .dockerignore  .env.example  .gitattributes  .gitignore  .ignore  AGENTS.md  Dockerfile  EiketsuCollector.spec  EiketsuCollector_fixed.spec  EiketsuCollector_next.spec  README.md  alembic.ini  docker-compose.yml  leaderboard-card-preview.html  pyproject.toml
.github/workflows/: ci-deploy.yml
alembic/: env.py
alembic/versions/: 20260511_0001_initial.py  20260511_0002_analysis_tables.py  20260511_0003_analysis_combat_metrics.py  20260512_0004_analysis_scopes.py  20260512_0005_shared_contributions.py  20260516_0006_vps_upload_server.py  20260517_0007_leaderboard_snapshots.py  20260519_0008_materialized_leaderboard.py
assets/: card_catalog_overlay.json
backend/: README.md
deploy/: Dockerfile  docker-compose.yml
deploy/pyinstaller/: EiketsuCollector_fast.spec
docs/: codex-branch-workflow.md  github-actions-deploy.md  version-control.md
scripts/: build_client_exe.ps1  deploy_vps_update.ps1  prepare_version_update.py  publish_client_update.ps1  run_client_gui.bat  share_sync.bat  share_sync.ps1
shared/: share_config.json
src/eiketsu_env/: __init__.py  __main__.py  cli.py  client_cli.py  config.py  (+5 more)
tests/: test_analysis.py  test_browser_session.py  test_card_lookup.py  test_client_gui.py  test_client_update.py  test_client_upload.py  test_collector.py  test_exporter.py  test_firefox_session.py  test_parsers.py  test_prepare_version_update.py  test_progress.py  test_repository.py  test_requesting.py  test_share.py  test_video_search.py  test_vps_server.py
(+35 files in other folders)
