[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eiketsu-env-db"
version = "0.1.8"
description = "英杰大战环境对局采集与分析底座"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
]
server = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]
export = [
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=16.0.0,<25.0.0",
]
client-build = [
  "pyinstaller>=6.0.0,<7.0.0",
]

[project.scripts]
eiketsu-env = "eiketsu_env.cli:main"
eiketsu-client = "eiketsu_env.client_cli:main"
eiketsu-client-gui = "eiketsu_env.client_gui:main"
eiketsu-server = "eiketsu_env.server_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eiketsu_env = ["assets/*.json", "web/templates/*.html", "web/static/*.css", "web/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
